# icfp-2023-eio-tutorial

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  dune  dune-project  tutorial.opam
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
client/: dune  main.ml
compare/: dune  errors.ml  parsing.ml  parsing_par.ml  perf.ml
doc/: intro.md  multicore.md  porting.md  prereqs.md
server/: context.mli  dune  main.ml  packages.ml  packages.mli  solver.ml
solutions/2-lwt-eio/: dune  main.ml  packages.ml  packages.mli  solver.ml
solutions/3-eio/: context.ml  dune  log.ml  main.ml  packages.ml  packages.mli  solver.ml
solutions/4-eio-multicore/: context.ml  dune  main.ml  opam_lock.ml  packages.ml  solver.ml  worker_pool.ml
